# rquest-rb

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  rquest-rb.gemspec
.cargo/: config.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: benchmark.yml  cross-compile.yml  test.yml
benchmark/: benchmark_results.md  http_clients_benchmark.rb  http_clients_benchmark.rs  http_clients_benchmark.sh  rust_profiling_benchmark.rs
ext/: Cargo.toml  extconf.rb
ext/rquest_rb/: Cargo.toml  extconf.rb
ext/rquest_rb/src/: lib.rs
ext/src/: lib.rs
lib/: rquest-rb.rb  rquest_rb.rb
lib/rquest_rb/: version.rb
script/: generate_benchmark_chart.rb  generate_combined_chart.rb  visualize_benchmarks.rb
test/: rquest_test.rb
