[package]
name = "rquest-rb"
version = "0.1.0"
edition = "2024"
description = "Ruby bindings for the rquest Rust HTTP client, a drop-in replacement for http.rb gem"
license = "MIT"
authors = ["SerpApi Team"]
repository = "https://github.com/ilyazub/rquest-rb"
links = "ruby"
build = "build.rs"

[lib]
name = "rquest_rb"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7" }
rb-sys = { version = "0.9.39", features = [
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
] }
rquest = "4.2.0"
rquest-util = "1.2.0"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "time", "macros"] }
url = "2.5"
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
rb-sys = { version = "0.9.39", features = [
  "link-ruby",
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
] }

[build-dependencies]
rb-sys-build = "0.9.39"
rb-sys-env = "0.1.2"

[profile.release]
lto = true
codegen-units = 1 