[package]
name = "rquest-rb"
version = "0.2.0"
edition = "2024"
description = "Ruby bindings for the rquest Rust HTTP client, a drop-in replacement for http.rb gem"
license = "MIT"
authors = ["SerpApi Team"]
repository = "https://github.com/ilyazub/rquest-rb"
links = "ruby"
build = "build.rs"

[lib]
name = "rquest_rb"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7", features = ["embed"] }
rb-sys = { version = "0.9.39", features = [
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
] }
rquest = "4.2.0"
rquest-util = "1.2.0"
tokio = { version = "1.36", features = ["rt", "rt-multi-thread", "time", "macros"] }
url = "2.5"
serde_json = "1.0"

[dev-dependencies]
rb-sys = { version = "0.9.39", features = [
  "link-ruby",
  "bindgen-rbimpls",
  "bindgen-deprecated-types",
  "stable-api-compiled-fallback",
] }
criterion = "0.5.1"
reqwest = { version = "0.12", features = ["blocking"] }
futures = "0.3"
tokio = { version = "1.36", features = ["full"] }

[build-dependencies]
rb-sys-build = "0.9.39"
rb-sys-env = "0.1.2"

[[bench]]
name = "http_clients_benchmark"
path = "../../benchmark/http_clients_benchmark.rs"
harness = false